--- a/style.css
+++ b/style.css
@@ -137,7 +137,16 @@ ul li {
     justify-content: space-between;
     align-items: normal;
 
-    /*border: 1px solid darkmagenta;*/
+    /*border: 1px solid aquamarine;*/
+}
+#itmo {
+    /*border: 1px solid lawngreen;*/
+
+}
+
+#itmo-years {
+    /*border: 1px solid darkred;*/
+
 }
 
 .skills-info ol {
@@ -145,12 +154,112 @@ ul li {
 
     position: absolute;
 
-    /*border: 1px solid pink;*/
+    display: block;
+    float: right;
+
+
+    /*border: 1px solid white;*/
 }
 
 .icons img {
     margin-right: 20px;
 }
 
+.contacts-button {
+    display: block;
+
+    width: 110px;
+    height: 30px;
+    font-size: 18px;
+    background: white;
+
+    color: #212121;
+
+    border: none;
+    cursor: pointer;
+
+    position: relative;
+}
+
+.contacts-button:hover, .contacts-button:focus {
+    outline: none;
+}
+
+nav .dropdown-contacts {
+    display: none;
+
+    width: 250px;
+    height: 120px;
 
 
+    position: absolute;
+    transform: translateY(-50%);
+
+    top: 20%;
+
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(15px);
+    border-radius: 30px;
+    border: 1px solid white;
+}
+
+.close {
+    opacity: 0.3;
+    display: block;
+
+    /*border: 1px seagreen;*/
+}
+.close:hover {
+    opacity: 1;
+}
+.close:before, .close:after {
+    position: absolute;
+    content: ' ';
+    height: 33px;
+    width: 2px;
+    background-color: white;
+    transform: translate(-50%);
+    right: 20px;
+    top: 43px;
+}
+.close:before {
+    transform: rotate(45deg);
+}
+.close:after {
+    transform: rotate(-45deg);
+}
+
+.dropdown-contacts .img {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    position: absolute;
+    width: 210px;
+
+    top: 10px;
+    /*border: 1px solid cornflowerblue;*/
+}
+
+.show {
+    display: block;
+}
+
+img {
+    cursor: pointer;
+}
+
+.first-class {
+    /*border: 1px solid blueviolet;*/
+}
+
+aside {
+    /*border: 1px solid navy;*/
+    float: left;
+
+    width: 1000px;
+}
+
+.second-class {
+    /*border: 1px solid magenta;*/
+}
